# ScriptTest_Lua_and_Python_in_Cpp

./: .gitignore  CMakeLists.txt  ReadMe.txt  Script_Test.cpp  python2in4000.py  rebuild_and_test.bash  stdafx.cpp
SPEED_TEST/: speedtest_cpp.cpp  speedtest_lua.cpp  speedtest_python.cpp
luascript/: luascript.cpp  luascript.h  luascript_unittest.cpp
luascript/lua/: ldebug.c  lvm.c  print.c
